# star

./: CMakeLists.txt  README.md
conf/: camera.xml
inc/: angleSolver.hpp  colorRecognition.hpp  getCube.hpp  setCamera.hpp  vision_mul.hpp
src/: CMakeLists.txt  angleSolver.cpp  colorRecognition.cpp  getCube.cpp  setCamera.cpp  star.cpp  vision_mul.cpp
